--- a/4Eyes/Assembly-CSharp-firstpass-vs.csproj
+++ b/4Eyes/Assembly-CSharp-firstpass-vs.csproj
@@ -48,7 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\General Scripts\ActivateTrigger.cs" />
-     <Compile Include="Assets\Standard Assets\Scripts\General Scripts\NewBehaviourScript2.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\General Scripts\Item.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\General Scripts\ItemManager.cs" />
      <None Include="Assets\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\Standard Assets (Mobile)\Shaders\Particle Shaders\Mobile Multiply Culled.shader" />
      <None Include="Assets\Standard Assets (Mobile)\Shaders\Miscellaneous Shaders\Mobile Background.shader" />
